<resources>
    <string name="app_name">ExpenseManager3</string>
    <string name="transactions">Transactions</string>
    <string name="add_transaction">Add Transaction</string>
    <string name="expenses">Expenses</string>
    <string name="add">Add</string>
    <string name="spend">Spend</string>
    <string name="description">Description</string>
    <string name="amount">Amount</string>
    <string name="item">Item</string>
    <string name="balance">Balance</string>
    <string name="create_account">Create Account</string>
    <string name="log_in">Log In</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="track_your_expenses">Track Your Expenses</string>
    <string name="already_registered_log_in">Already Registered? Log In</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sing_up">Sing Up</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
</resources>